Wed May 01 06:16:44 GMT 2013  olly <olly@survex.com>

	* python/Makefile.am: Add 2to3 rule for maintainers to help automate
	  updating the Python 3 version from the Python 2 one.

Wed May 01 05:39:13 GMT 2013  olly <olly@survex.com>

	* python/Makefile.am: Move comment about using -outdir to a more
	  logical place.

Fri Apr 26 10:32:59 GMT 2013  Olly Betts <olly@survex.com>

	* php/Makefile.am: Run add-php-ref-handling before add-php-type-hints
	  as the other order doesn't fully work.

Fri Apr 26 09:39:10 GMT 2013  Olly Betts <olly@survex.com>

	* Forward port change from branches/1.2:
	* php/Makefile.am,php/add-php-ref-handling,php/smoketest.php: Keep
	  references to the PHP wrapper object when an object is set on
	  another object.  (Fixes #614)

Fri Apr 26 09:08:32 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Apr 22 05:25:34 GMT 2013  olly <olly@survex.com>

	* python/smoketest2.py: Need to raise exception, not just construct it!

Mon Apr 22 05:25:00 GMT 2013  olly <olly@survex.com>

	* python/testsuite2.py: Export TestFail class from testsuite.

Mon Apr 22 05:23:02 GMT 2013  olly <olly@survex.com>

	* python/testsuite2.py: Swap order of arguments in call to expect() so
	  error makes more sense.

Mon Apr 22 05:19:42 GMT 2013  olly <olly@survex.com>

	* HACKING: Document Debian packages needed for each language.

Sun Apr 21 07:08:10 GMT 2013  Olly Betts <olly@survex.com>

	* java/SmokeTest.java: Avoid using System.err.printf() which fails
	  to compile with the java compiler on atreus for some reason.

Sun Apr 21 07:05:42 GMT 2013  Olly Betts <olly@survex.com>

	* xapian-head.i: Defined XAPIAN_LIB_BUILD so that we don't get errors
	  about processing headers individually with SWIG.

Wed Apr 17 03:19:11 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.15 and ChangeLog.

Mon Apr 08 06:31:46 GMT 2013  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am: Update for new class
	  TfIdfWeight.
